# seedall

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/seedall/: __init__.py  core.py
tests/: test_core.py
